# emerald

./: .gitignore  Makefile.am  README  VERSION  common.am  configure.ac  emerald.files  emerald.includes
doc/: emerald.1
engines/: Makefile.am  legacy.cc  legacy_icon.h  line.cc  oxygen.cc  oxygen_icon.h  pixmap.cc  pixmap_icon.h  truglass.cc  truglass_icon.h  vrunner.cc  vrunner_icon.h  zootreeves.cc  zootreeves_icon.h
include/: Makefile.am  emerald.h  engine.h  filesystem.h  keyfile.h  libengine.h  setting_item.h  titlebar.h
libengine/: Makefile.am  emerald.c  emerald.cc  emerald.h  engine.h  filesystem.h  format.cc  format.h  keyfile.cc  keyfile.h  libengine.h  setting_item.cc  setting_item.h  themer.c  themer.cc  titlebar.h
misc/: emerald-theme-manager.desktop
po/: POTFILES.in
src/: Makefile.am  cairo_utils.cc  cairo_utils.h  decor.cc  decor.h  engine_loader.cc  main.c  main.cc  quads.cc  quads.h  utils.cc  utils.h  window.cc  window.h
themer/: Makefile.am  compat.h  main.cc  theme_list.cc  theme_list.h  window.cc  window.h
