## Process this file with automake to produce Makefile.in

ACLOCAL_AMFLAGS = -I m4

AM_CPPFLAGS = -I$(top_srcdir)/include $(BOOST_CPPFLAGS)
SUBDIRS = \
		  libengine \
		  src \
		  include \
		  engines \
		  themer \
		  pixmaps \
		  misc \
		  defaults \
		  doc \
		  po

EXTRA_DIST =			\
    VERSION
